Sidebar informações do gropo

--- a/interacoes.html
+++ b/interacoes.html
@@ -540,7 +540,7 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-area area-msg division-4">
+                <div class="col-area area-msg division-3">
                     <div class="hd">
                         <h5 class="contact-data"><span class="new-contact"><i class="fas fa-plus"></i></span> <i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
@@ -939,7 +939,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-area area-add-right research">
+                <div class="col-area area-add-right research hide">
                     <div class="hdr">
                         <p>Pesquisar na Conversa</p>
                         <button class="btn btn-sn btn-default btn-close" id="btnCloseResearch">
@@ -1046,7 +1046,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-area area-add-right contact">
+                <div class="col-area area-add-right contact hide">
                     <div class="hdr">
                         <p>William Oliveira</p>
                         <button class="btn btn-sn btn-default btn-close" id="btnCloseContact">
@@ -1092,6 +1092,69 @@
                                         <i class="fas fa-user-plus"></i>
                                     </span>
                                     <div class="txt">Adicionar a um Novo Grupo</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="ib-gp">
+                            <h4>Mais Informações</h4>
+                            <ul class="list-group-contact">
+                                <li class="add-group-contact">
+                                    <span class="circle">
+                                        <i class="fas fa-plus"></i>
+                                    </span>
+                                    <div class="txt">Adicionar Campanha</div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-area area-add-right contact group-contact">
+                    <div class="hdr">
+                        <p>Informação do Grupo</p>
+                        <button class="btn btn-sn btn-default btn-close" id="btnCloseContact">
+                            <i class="fas fa-times"></i>
+                        </button>
+                    </div>
+                    <div class="info-boxes">
+                        <div class="ib-gp">
+                            <h4>Nome da Fila</h4>
+                            <select class="select-fila full-name">
+                                <option value="" selected>Fila XPTO</option>
+                                <option value="">Fila 123</option>
+                                <option value="">Fila Sei lá do que</option>
+                                <option value="">Fila 4</option>
+                            </select>
+                        </div>
+                        <div class="ib-gp">
+                            <h4>Nome do Grupo</h4>
+                            <input type="text" placeholder="Escreva aqui" class="txt-fila full-name">
+                        </div>
+                        <div class="ib-gp">
+                            <h4>Contatos Adicionados</h4>
+                            <ul class="list-group-contact name-group">
+                                <li class="add-group-contact">
+                                    <span class="circle">
+                                        <i class="fas fa-user-plus"></i>
+                                    </span>
+                                    <div class="txt">Adicionar a um Novo Grupo</div>
+                                </li>
+                                <li class="newmsg">
+                                    <div class="box">
+                                        <span class="circle">WO</span>
+                                    </div>
+                                    <p class="txt">
+                                        <strong>Nome do Contato</strong>
+                                        <span>Último contato 23/12/2018 às 19:30:01</span>
+                                    </p>
+                                </li>
+                                <li class="newmsg">
+                                    <div class="box">
+                                        <span class="circle">WO</span>
+                                    </div>
+                                    <p class="txt">
+                                        <strong>Nome do Contato</strong>
+                                        <span>Último contato 23/12/2018 às 19:30:01</span>
+                                    </p>
                                 </li>
                             </ul>
                         </div>
